--- a/flask-app/templates/groups.html
+++ b/flask-app/templates/groups.html
@@ -9,23 +9,17 @@
     <table class="table">
 	<thead class= "thead-dark">
 	  <tr>
-	    <th scope="col"> Group </th>
-	    <th scope="col"> Members </th>
-	    <th scope="col"> Total Expense </th>
-        <th scope="col"> Last Expense </th>
+	    <th scope="col"> Group Name </th>
 	  </tr>
 	</thead>
 	<tbody>
 	  {% for group in groups %}
 	  <tr>
 	    <td>
-		    <a href ="{{ url_for('user' , group_id = group.id ) }}" >
-			{{group.id}}
+		    <a href ="{{ url_for('user' , group_name=group.name ) }}" >
+			{{group.name}}
 		    </a>
 	    </td>
-	    <td>{{group.members}}</td>
-	    <td>{{group.total_expense}}</td>
-	    <td>{{group.last_expense}}</td>
 	  </tr>
 	  {% endfor %}
 	</tbody>
