--- a/flask-app/templates/layout.html
+++ b/flask-app/templates/layout.html
@@ -12,7 +12,7 @@
     </style>
 {% endblock %}
 {% block title %}
-     Mellon Data - The Data Mining Company 
+     SettleGram  
 {% endblock %}
 {% block content %}
 <div class = "container">
